# ACInfer_Ultra

./: .gitignore  CMakeLists.txt  README.md  atc_convert.sh  fusion_result.json
cmake/: FindCUDA.cmake  FindOpenCV.cmake  FindTensorRT.cmake
python/: yolov8_add_pose_layer.py
src/: CMakeLists.txt  build_yolo_engine.cpp  yolov8_img_demo.cpp  yolov8_video_demo.cpp  yolov8_video_demo_deepsort.cpp
src/app/common/: object_detector.h  pose_detector.h
src/app/common/kernel/: preprocess_warp_affine.cu  preprocess_warp_affine.h
src/app/common/process/: warp_affine.cpp  warp_affine.h
src/app/detect/: yolo.cpp  yolo.h
src/app/detect/yolo_postprocess/: postprocess.cpp  postprocess.h
src/app/feature/: ReID.cpp  ReID.h
src/app/pose/: DWPose.cpp  DWPose.h  pose copy 2.cpp  pose copy.cpp  pose.cpp  pose.h
src/app/pose copy/: DWPose copy.cpp  DWPose.cpp  DWPose.h  DWPose_type.h
src/app/tracker/botsort/: botsort.cpp  botsort.h
src/app/tracker/deepsort/: deepsort.cpp  deepsort.h
src/app/yolo/: yolo copy 2.cpp  yolo copy.cpp  yolo.cpp  yolo.h  yolo_type.h  yolov8.cpp  yolov8.h  yolov8_type.h  yolov8pose.cpp  yolov8pose.h
src/app/yolo/process/: postprocess.cpp  postprocess.cuh  postprocess.h  preprocess.cpp  preprocess.h  yolov8_postprocess.cpp  yolov8_postprocess.cuh  yolov8_postprocess.h
src/builder/: trt_builder.cpp  trt_builder.h
src/common/: utils.cpp  utils.h
src/engine/: atlas_engine.cpp  atlas_engine.h  engine.h  engine_api.cpp  engine_api.h  onnx_engine.cpp  onnx_engine.h  rknn_engine.cpp  trt_engine.cpp
src/engine/builder/: trt_builder.cpp  trt_builder.h
src/kernel/yolov8_det_kernel/: yolov8_det_process.cu
src/kernel/yolov8_pose_kernel/: yolov8_pose_process.cu  yolov8_pose_processv2.cu
src/plugin/: CMakeLists.txt
src/plugin/common/: common.cuh  plugin.h
src/plugin/customLayerPlugin/: customLayerInference.cu  customLayerPlugin.cpp  customLayerPlugin.h
src/plugin/yolov8DetLayerPlugin/: yolov8DetLayerInference.cu  yolov8DetLayerParameters.h  yolov8DetLayerPlugin.cpp  yolov8DetLayerPlugin.h
src/plugin/yolov8PoseLayerPlugin/: yolov8PoseLayerInference.cu  yolov8PoseLayerParameters.h  yolov8PoseLayerPlugin.cpp  yolov8PoseLayerPlugin.h
src/tools/: ac_draw.cpp  ac_draw.h  ac_utils.cpp  ac_utils.h
src/trt/: trt_cuda.cpp  trt_cuda.h  trt_memory.cpp  trt_memory.h  trt_tensor.cpp  trt_tensor.h
src/types/: ACType.h  error.h
src/utils/: a.txt  utils.cpp  utils.h
